# GA2

./: CMakeLists.txt  README.md  crossovermutation.h  floatvectorgenomefitness.cpp  floatvectorgenomefitness.h  gafactory.h  gatest.cpp  geneticalgorithm.cpp  geneticalgorithm.h  genomefitness.h  ideas.txt  mersennerandomnumbergenerator.cpp  mpieventdistributor.cpp  mpieventdistributor.h  mpipopulationfitnesscalculation.cpp  mpipopulationfitnesscalculation.h  mpitest.cpp  multithreadedpopulationfitnesscalculation.cpp  multithreadedpopulationfitnesscalculation.h  ndsortedpopulation.h  population.h  probesystem.h  rankparentselection.cpp  rankparentselection.h  remainingtargetpopulationsizeiteration.h  rundebasictests.sh  simplesortedpopulation.cpp  simplesortedpopulation.h  singlebestelitism.cpp  singlebestelitism.h  singlethreadedpopulationcrossover.cpp  singlethreadedpopulationcrossover.h  singlethreadedpopulationfitnesscalculation.cpp  singlethreadedpopulationfitnesscalculation.h  singlethreadedpopulationmutation.cpp  singlethreadedpopulationmutation.h  test.cpp  threadtest.cpp  uniformvectorgenomecrossover.h  valuefitness.cpp  (+2 more)
cmake/: EATKConfig.cmake.in  MOGAL2Config.cmake.in  Macros.cmake
examples/: CMakeLists.txt  knapsack.cpp  travelingsalesman.cpp
src/: CMakeLists.txt  basicnondominatedsetcreator.cpp  basicnondominatedsetcreator.h  calculation.h  crossovermutation.h  differentialevolutionevolver.cpp  differentialevolutionevolver.h  duplicateindividualremoval.h  eatkconfig.h.in  elitism.h  evolutionaryalgorithm.cpp  evolutionaryalgorithm.h  fasternondominatedsetcreator.cpp  fasternondominatedsetcreator.h  fitnessbasedduplicateremoval.cpp  fitnessbasedduplicateremoval.h  geneticalgorithm.cpp  geneticalgorithm.h  genomefitness.h  goodmanweareevolver.cpp  goodmanweareevolver.h  individual.h  jadeevolver.cpp  jadeevolver.h  mersennerandomnumbergenerator.cpp  mersennerandomnumbergenerator.h  metropolishastingsevolver.cpp  metropolishastingsevolver.h  migrationstrategy.cpp  migrationstrategy.h  mogal2config.h.in  mpieventdistributor.cpp  mpieventdistributor.h  mpipopulationfitnesscalculation.cpp  mpipopulationfitnesscalculation.h  multipopulationevolver.cpp  multipopulationevolver.h  multithreadedpopulationfitnesscalculation.cpp  multithreadedpopulationfitnesscalculation.h  ndsortedpopulation.cpp  (+47 more)
tests/: CMakeLists.txt  debasictest.cpp  deidxtest.cpp  detest.cpp  disttest.cpp  gatest.cpp  gwtest.cpp  gwtest.py  jadebasictest.cpp  jadetest.cpp  mhtest.cpp  mpiandthreadstest.cpp  mpitest.cpp  multipoptest.cpp  ndset.cpp  nsga2test.cpp  testfunctions.h  threadtest.cpp  tournvsbeta.py
